<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/breakingNewsFrag">


    <fragment
        android:id="@+id/breakingNewsFrag"
        android:name="com.project.news.ui.fragments.BreakingNewsFrag"
        android:label="@string/breaking_news"
        tools:layout="@layout/fragment_breaking_news">
        <action
            android:id="@+id/action_breakingNewsFrag_to_articleFrag"
            app:destination="@id/articleFrag"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/to_right"
            />
    </fragment>
    <fragment
        android:id="@+id/savedNewsFrag"
        android:name="com.project.news.ui.fragments.SavedNewsFrag"
        android:label="@string/saved_news"
        tools:layout="@layout/fragment_saved_news">
        <action
            android:id="@+id/action_savedNewsFrag_to_articleFrag"
            app:destination="@id/articleFrag"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/to_right"
            />
    </fragment>
    <fragment
        android:id="@+id/searchNewsFrag"
        android:name="com.project.news.ui.fragments.SearchNewsFrag"
        android:label="@string/search_news"
        tools:layout="@layout/fragment_search_news">
        <action
            android:id="@+id/action_searchNewsFrag_to_articleFrag"
            app:destination="@id/articleFrag"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/to_right"
            />
    </fragment>
    <fragment
        android:id="@+id/articleFrag"
        android:name="com.project.news.ui.fragments.ArticleFrag"
        android:label="@string/article"
        tools:layout="@layout/fragment_article">
        <argument
            android:name="article"
            app:argType="com.project.news.models.Article"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/to_right"
            />
    </fragment>
</navigation>